# Planet_Fluid

./: .gitignore  BLOCKCHAIN_INFO.md  BLOCKCHAIN_INFO_EN.md  CHANGELOG.md  README.md  README_EN.md  SIGNATURE.sha256
Eurus_Engine/: CHANGELOG.md  README.md  README_EN.md  pyproject.toml
Eurus_Engine/docs/: EURUS_CHERUBIM_MAPPING.md  PLANETARY_BRIDGES.md
Eurus_Engine/eurus_engine/: __init__.py
Eurus_Engine/eurus_engine/agent/: weather_agent.py
Eurus_Engine/eurus_engine/bridges/: __init__.py  cherubim_bridge.py  joe_moe_bridge.py  lucifer_bridge.py  terracore_bridge.py
Eurus_Engine/eurus_engine/circulation/: fronts.py  hadley_cell.py  pressure_system.py
Eurus_Engine/eurus_engine/climate/: __init__.py  regime.py
Eurus_Engine/eurus_engine/contracts/: schemas.py
Eurus_Engine/eurus_engine/health/: weather_health.py
Eurus_Engine/eurus_engine/physics/: fluid_dynamics.py  thermodynamics.py  vertical_profile.py
Eurus_Engine/scripts/: cleanup_generated.py  demo_planetary_bridges.py  demo_snapshot_chain.py
Eurus_Engine/tests/: test_eurus.py
Oceanus_Engine/: README.md  README_EN.md  pyproject.toml
Oceanus_Engine/oceanus_engine/: __init__.py
Oceanus_Engine/oceanus_engine/bridge/: __init__.py  eurus_wind_adapter.py  marine_autonomy_bridge.py
Oceanus_Engine/oceanus_engine/coastal/: __init__.py  route_utility.py
Oceanus_Engine/oceanus_engine/contracts/: __init__.py  schemas.py
Oceanus_Engine/oceanus_engine/core/: __init__.py  grid_model.py
Oceanus_Engine/oceanus_engine/observer/: __init__.py  ocean_observer.py
Oceanus_Engine/oceanus_engine/physics/: __init__.py  coriolis.py  plate_hooks.py  seafloor.py  tides.py  (+3 more)
Oceanus_Engine/tests/: test_eurus_wind_adapter.py  test_oceanus_mvp.py
(+6 files in other folders)
