[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eurus_engine"
version = "0.1.4"
description = "행성 대기 날씨 동역학 엔진 — Shallow Water Equations, Coriolis, 대순환, CAPE/CIN, 복사 균형"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "qquartsco-svg"},
]
keywords = [
    "atmospheric-dynamics", "fluid-dynamics", "weather",
    "planetary-science", "coriolis", "shallow-water-equations",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["eurus_engine"]
