[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oceanus_engine"
version = "0.1.0"
description = "Planetary ocean dynamics — SWE surface flow, thermohaline, lunisolar tides, seafloor/plate hooks, route Ω"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "qquartsco-svg"}]
keywords = [
    "ocean-dynamics", "shallow-water", "tides", "thermohaline",
    "marine-routing", "plate-boundary", "coriolis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Ocean Science",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["oceanus_engine"]
